2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Use generic urls for book
	and rss groups.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-airs.el (shimbun-airs-concat-url): Don't use old-style backquotes.

	* sb-chalow.el (shimbun-chalow-get-headers): Don't use old-style
	backquotes.

	* sb-debian.el (shimbun-debian-get-headers): Don't use old-style
	backquotes.

	* sb-digiko.el (shimbun-digiko-get-headers): Don't use old-style
	backquotes.

	* sb-javaconf.el (shimbun-javaconf-concat-url): Don't use old-style
	backquotes.

	* sb-mhonarc.el (shimbun-mhonarc-extract-header-values): Don't use
	old-style backquotes.

	* sb-tdiary-ml.el (shimbun-tdiary-ml-concat-url): Don't use old-style
	backquotes.

	* sb-tdiary.el (shimbun-tdiary-get-headers, shimbun-tdiary-make-date):
	Don't use old-style backquotes.

	* sb-wikimedia.el (shimbun-wikimedia-concat-url): Don't use old-style
	backquotes.

2007-08-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* sb-tigris.el (shimbun-make-contents): Use forward-line instead of
	next|previouse-line.

2007-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Fix regexps.

2007-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Remove table tags that
	surround image tags.

2007-08-21  Eugene Oleinik  <eo@aoizora.org>

	* shimbun.el (shimbun-header-insert-and-buffer-string): Make charset
	default to UTF-8.

2007-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-x-face-alist): Update default face.

2007-08-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-article-1): Replace xref with a real url that
	ITmedia site requires for a referer.

2007-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el (gnus-group-make-shimbun-group): Use encoded group name
	when accessing it as an ephemeral group; don't kill group that isn't